# parallaxoid-wallpaper

./: README.md
src/: CMakeLists.txt  README.md  config.ui  parallaxoidwallpaper.cpp  parallaxoidwallpaper.desktop  parallaxoidwallpaper.h
